--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:required="false" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,7 +19,11 @@
         android:theme="@style/Theme.AndroidBasicNfcReader"
         tools:targetApi="31">
         <activity
-            android:name=".NFCAActivity"
+            android:name=".CrashActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".MifareUltralightActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
